--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
       <div class="grid2">
         <div><label class="small muted">Título</label><input id="mTitle" placeholder="Ex.: Treinar 30 min"></div>
         <div><label class="small muted">Recorrência</label><select id="mRecur"><option value="once">Única</option><option value="weekly">Semanal</option></select></div>
+<div><label class="small muted">Dificuldade</label><select id="mDiff"><option value="easy">Fácil (x1)</option><option value="medium">Média (x1.5)</option><option value="hard">Difícil (x2)</option></select></div>
         <div><label class="small muted">Data</label><input type="date" id="mDate"></div>
         <div><label class="small muted">Horário</label><input type="time" id="mTime" value="07:00"></div>
         <div>
