--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#6b4f2c">
   <link rel="manifest" href="manifest.json">
-  <title>Meta XP — Edição RPG (Ouro)</title>
+  <title>Meta XP — 2.3 (RPG)</title>
   <style>
     :root{
       --bg:#17130e; --bg2:#1e1912; --paper:#221b12; --ink:#e8d9b8; --muted:#cbbf9b;
@@ -80,7 +80,6 @@
   </div>
 
   <main>
-    <!-- Missões -->
     <section id="tab-missoes">
       <div class="filterbar">
         <select id="range"><option value="day">Hoje</option><option value="week">Semana</option><option value="month">Mês</option></select>
@@ -98,7 +97,6 @@
       <div class="empty" id="missionEmpty">Nenhuma missão. Toque em “＋ Missão”.</div>
     </section>
 
-    <!-- Atributos -->
     <section id="tab-atributos" style="display:none;">
       <div class="card">
         <div class="row" style="align-items:flex-end;">
@@ -111,13 +109,11 @@
       <div class="empty" id="attrEmpty">Sem atributos ainda. Crie o primeiro acima 👆</div>
     </section>
 
-    <!-- Conquistas -->
     <section id="tab-conquistas" style="display:none;">
       <div id="achList"></div>
       <div class="empty" id="achEmpty">Nenhuma conquista ainda. Continue sua jornada!</div>
     </section>
 
-    <!-- Calendário -->
     <section id="tab-calendario" style="display:none;">
       <div class="card">
         <div class="row" style="align-items:center;">
@@ -138,7 +134,6 @@
       </div>
     </section>
 
-    <!-- Recompensas -->
     <section id="tab-rewards" style="display:none;">
       <div class="card">
         <div class="row" style="align-items:flex-end;">
@@ -158,7 +153,6 @@
       </div>
     </section>
 
-    <!-- Configurações -->
     <section id="tab-config" style="display:none;">
       <div class="card">
         <h3 style="margin:0 0 8px 0;">Dados</h3>
@@ -178,8 +172,9 @@
     </section>
   </main>
 
-  <footer>Meta XP — Ouro & Conquistas. Instale: <b>Compartilhar ▸ Adicionar à Tela de Início</b>.</footer>
+  <footer>Meta XP 2.3 — Ouro, Dificuldade e Ícones. Instale: <b>Compartilhar ▸ Adicionar à Tela de Início</b>.</footer>
 
+  <!-- Modal: Editar personagem -->
   <div class="modal" id="charModal">
     <div class="sheet">
       <h3 style="margin:0 0 10px 0;">Herói</h3>
@@ -191,15 +186,16 @@
     </div>
   </div>
 
+  <!-- Modal: Nova Missão -->
   <div class="modal" id="missionModal">
     <div class="sheet">
       <h3 style="margin:0 0 10px 0;">Nova missão</h3>
       <div class="grid2">
         <div><label class="small muted">Título</label><input id="mTitle" placeholder="Ex.: Treinar 30 min"></div>
         <div><label class="small muted">Recorrência</label><select id="mRecur"><option value="once">Única</option><option value="weekly">Semanal</option></select></div>
-<div><label class="small muted">Dificuldade</label><select id="mDiff"><option value="easy">Fácil (x1)</option><option value="medium">Média (x1.5)</option><option value="hard">Difícil (x2)</option></select></div>
         <div><label class="small muted">Data</label><input type="date" id="mDate"></div>
         <div><label class="small muted">Horário</label><input type="time" id="mTime" value="07:00"></div>
+
         <div>
           <label class="small muted">Repetir (semana)</label>
           <div class="row" id="mWeekdays">
@@ -213,6 +209,15 @@
           </div>
           <p class="muted small">Use os dias apenas se for semanal.</p>
         </div>
+
+        <div><label class="small muted">Dificuldade</label>
+          <select id="mDiff">
+            <option value="easy">Fácil (x1)</option>
+            <option value="medium">Média (x1.5)</option>
+            <option value="hard">Difícil (x2)</option>
+          </select>
+        </div>
+
         <div><label class="small muted">XP do personagem</label><input type="number" id="mXP" min="0" value="10"></div>
         <div><label class="small muted">Atributos (XP por atributo)</label><div id="mAttrList"></div><button id="addAttrAlloc" class="chip" style="margin-top:8px;">+ Atribuição</button></div>
       </div>
