--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#6b4f2c">
   <link rel="manifest" href="manifest.json">
-  <title>Meta XP — 2.3 (RPG)</title>
+  <title>Meta XP — 2.4 (RPG)</title>
   <style>
     :root{
       --bg:#17130e; --bg2:#1e1912; --paper:#221b12; --ink:#e8d9b8; --muted:#cbbf9b;
@@ -172,7 +172,7 @@
     </section>
   </main>
 
-  <footer>Meta XP 2.3 — Ouro, Dificuldade e Ícones. Instale: <b>Compartilhar ▸ Adicionar à Tela de Início</b>.</footer>
+  <footer>Meta XP 2.4 — Conquistas estendidas, ouro visível nas conquistas.</footer>
 
   <!-- Modal: Editar personagem -->
   <div class="modal" id="charModal">
