--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
       <div class="card">
         <h3 style="margin:0 0 8px 0;">Aparência</h3>
         <div class="row">
-          <button id="themeMedieval" class="wood">RPG Medieval (ativo)</button>
+          <button id="themeMedieval" class="wood">RPG Medieval</button>
         </div>
         <p class="muted">Mais temas em breve.</p>
       </div>
     </section>
   </main>
 
-  <footer>Meta XP 2.3 — Ouro, Dificuldade e Ícones. Instale: <b>Compartilhar ▸ Adicionar à Tela de Início</b>.</footer>
+  <footer>Meta XP 2.3 — estável</footer>
 
   <!-- Modal: Editar personagem -->
   <div class="modal" id="charModal">
