--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <div class="tab" data-tab="conquistas">🏆 Conquistas</div>
     <div class="tab" data-tab="calendario">📜 Calendário</div>
     <div class="tab" data-tab="rewards">💰 Recompensas</div>
+    <div class="tab" data-tab="survival">🌿 Sobrevivência</div>
     <div class="tab" data-tab="config">⚙️ Configurações</div>
   </div>
 
