--- a/index.html
+++ b/index.html
@@ -153,6 +153,34 @@
       </div>
     </section>
 
+    <section id="tab-survival" style="display:none;">
+  <div class="card">
+    <h3 style="margin:0 0 8px 0;">Registros do dia</h3>
+    <div class="row" style="align-items:flex-end;">
+      <div>
+        <label class="small muted">Data</label>
+        <input id="svDate" type="date">
+      </div>
+      <button id="svToday" class="wood">Hoje</button>
+      <div>
+        <label class="small muted">😴 Horas de sono</label>
+        <input id="svSleep" type="number" step="0.5" min="0" max="24" placeholder="ex.: 7.5" style="width:140px">
+      </div>
+      <div>
+        <label class="small muted">💧 Água (L)</label>
+        <input id="svWater" type="number" step="0.25" min="0" placeholder="ex.: 2.0" style="width:140px">
+      </div>
+      <button id="svSave" class="wood">Salvar</button>
+    </div>
+    <p class="muted small">Meta diária: <b id="svGoalsText">8h de sono • 2.0L de água</b>. Ao atingir cada meta: ganha XP no personagem e no atributo <b>Saúde</b>.</p>
+  </div>
+
+  <div class="card">
+    <h3 style="margin:0 0 8px 0;">Histórico semanal</h3>
+    <div id="svHistory"></div>
+  </div>
+</section>
+    
     <section id="tab-config" style="display:none;">
       <div class="card">
         <h3 style="margin:0 0 8px 0;">Dados</h3>
