--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
   <div class="row" style="align-items:center;">
     <div class="crest" style="flex:1; display:flex; align-items:center; gap:10px;">
       <!-- Avatar do personagem -->
-      <img id="charAvatarHeader" src="" alt="Avatar"
-           style="width:48px; height:48px; border-radius:8px; border:2px solid var(--accent); display:none;">
+<img id="charAvatar" src="" alt="Avatar"
+     style="width:48px; height:48px; border-radius:8px; border:2px solid var(--accent); display:none;">
+
 
       <!-- Selo XP -->
       <div class="seal">XP</div>
