--- a/index.html
+++ b/index.html
@@ -49,22 +49,25 @@
   </style>
 </head>
 <body>
- <header>
+<header>
   <div class="row" style="align-items:center;">
     <div class="crest" style="flex:1; display:flex; align-items:center; gap:10px;">
-      <!-- Avatar do personagem -->
-<img id="charAvatar" src="" alt="Avatar"
-     style="width:48px; height:48px; border-radius:8px; border:2px solid var(--accent); display:none;">
 
+      <!-- Avatar do personagem -->
+      <img id="charAvatar" src="" alt="Avatar"
+           style="width:48px; height:48px; border-radius:8px; border:2px solid var(--accent); display:none;">
 
       <!-- Selo XP -->
       <div class="seal">XP</div>
 
       <!-- Nome e nível -->
-      <div>
+      <div style="flex:1;">
         <div id="charNameView" style="font-weight:900; letter-spacing:.5px;">Aventureiro</div>
         <div class="small muted">Nv. <span id="charLevel">1</span></div>
       </div>
+
+      <!-- Botão para abrir o modal do personagem -->
+      <button id="editCharBtn" class="chip wood">⚙️ Editar</button>
     </div>
   </div>
 
@@ -257,7 +260,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="app.js?v=2.3.2"></script>
+<script src="app.js"></script>
   <script>if('serviceWorker' in navigator){navigator.serviceWorker.register('sw.js?v=2.3.3');}</script>
 </body>
 </html>
