--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         <div class="small muted">Nv. <span id="charLevel">1</span></div>
       </div>
 
+      <!-- Ouro -->
+      <div class="chip" id="goldDisplay" style="min-width:80px; text-align:center;">
+        🪙 <span id="goldBalance">0</span>
+      </div>
+
       <!-- Botão para abrir o modal do personagem -->
       <button id="editCharBtn" class="chip wood">⚙️ Editar</button>
     </div>
@@ -78,6 +83,7 @@
     </div>
   </div>
 </header>
+
 
 
   <div class="tabs">
